Default page title (the page's URL) is now in an LTR embedding.

Only affects URLs with strong right-to-left characters.

This fixes the case where the URL contains RTL characters, causing the
components of the URL to be rendered from right to left. The display is
now consistent with the Omnibox display of URLs and compliant with RFC
3987.

BUG=630481
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2176463002
Cr-Commit-Position: refs/heads/master@{#408920}

Former-commit-id: c2099b61204ff4d273fdf9fc136bcb02d76093f6